# HDiffPatch

./: .gitignore  CMakeLists.txt
bsdiff_wrapper/: CMakeLists.txt
dirDiffPatch/: CMakeLists.txt
libHDiffPatch/: CMakeLists.txt
libParallel/: CMakeLists.txt
libmd5/: CMakeLists.txt
lzma/C/: CMakeLists.txt
test/: CMakeLists.txt  test_dummy.cpp
vcdiff_wrapper/: CMakeLists.txt
